Bug 1386483 - Split the wr_dp_push_clip method into two to allow reusing clips. r=jrmuizel

MozReview-Commit-ID: 90BEJGs8wGg